# vsntp

./: .gitignore  AUTHORS.zh-cn  AUTHORS.zh-tw  ChangeLog  INSTALL.zh-cn  INSTALL.zh-tw  Makefile.am  NEWS  NEWS.zh-cn  NEWS.zh-tw  README  README.zh-cn  README.zh-tw  THANKS  THANKS.zh-cn  THANKS.zh-tw  config.h.in  configure.ac  vsntp.c
doc/: Makefile.am  vsntp.8  vsntp.texi
init.d/: Makefile.am  README  README.zh-cn  README.zh-tw  vsntp  vsntp.debian  vsntp.redhat
